fix(logout): use i18n for title and align heights

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -37,6 +37,7 @@ html, body, .layout {
         top:34px;
         right:21px;
         overflow:hidden;
+        padding-top:1px;
         * {
             color: #CADBEC;
             font-family:"OpenSansCondLight", Helvetica, Arial, sans-serif;
@@ -60,10 +61,24 @@ html, body, .layout {
         }
 
         .username {
-            border-right:1px solid #CADBEC;
+
             padding-right:6px;
             margin-right:15px;
             font-family: "OpenSansRegular";
+            position:relative;
+            display:inline-block;
+            top:2px;
+
+            &:after{
+                display:inline-block;
+                height:20px;
+                width:1px;
+                background:#CADBEC;
+                content:"";
+                position:absolute;
+                top:-2px;
+                right:0;
+            }
         }
 
         .logout_icon{
